--- a/local/index.html
+++ b/local/index.html
@@ -1,6 +1,5 @@
 <html>
     <head>
-        
         <link rel="stylesheet" type="text/css" href="./amocrm_style.css" />
 
         <style>
@@ -12,13 +11,9 @@
         </style>
     </head>
     <body>
-        <div id="root">
-            <div class="widget_settings_block__descr">oery eiruyvb eriuyvberiufyvebr iuy</div>
-            <div id="widget_settings__fields_wrapper"></div>
-            <div>
-                <input type='text' id="phone-field" name="phone" class="text-input widget_settings_block__controls__" />
-            </div>
-            <button type="button" id="btn" class="button-input">Send</button>
+        <div id="root" class="widget_settings_block__descr">
+            
         </div>
+        <div id="widget_settings__fields_wrapper"></div>
     </body>
 </html>
