--- a/local/index.html
+++ b/local/index.html
@@ -8,12 +8,35 @@
                 background-color: white;
                 padding: 25px;
             }
+
+            .wide-content {
+                height: 100px;
+            }
         </style>
     </head>
     <body>
-        <div id="root" class="widget_settings_block__descr">
-            
+        <div id="root" class="">
+            <button id="open-modal" class="button-input button-input_blue">Open!</button>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
+            <div class="wide-content">Lorem ipsum</div>
         </div>
-        <div id="widget_settings__fields_wrapper"></div>
     </body>
 </html>
