modal window container style; button models accepts widget object

--- a/local/index.html
+++ b/local/index.html
@@ -15,28 +15,8 @@
         </style>
     </head>
     <body>
-        <div id="root" class="">
-            <button id="open-modal" class="button-input button-input_blue">Open!</button>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
-            <div class="wide-content">Lorem ipsum</div>
+        <div id="root" class="widget_settings_block__descr">
+            
         </div>
     </body>
 </html>
